# slangpy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOP.md  README.md  REUSE.toml  nsyspython.bat  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.bat  setup.py  setup.sh  vcpkg.json
.claude/hooks/: stop.py
.github/: copilot-instructions.md
.github/scripts/: sign_macos_bins.sh
.vscode-default/: launch.json  settings.json
docs/: api_order.json  changelog.rst  conf.py  generate_api.py  index.rst
slangpy/: __init__.py
src/: CMakeLists.txt
src/sgl/: CMakeLists.txt  sgl.cpp  sgl.h  sgl_pch.h
src/sgl/app/: app.cpp  app.h
src/sgl/core/: bitmap.cpp  bitmap.h  crypto.cpp  crypto.h  data_struct.cpp  data_struct.h  data_type.h  dds_file.cpp  dds_file.h  enum.h  error.cpp  error.h  file_stream.cpp  file_stream.h  file_system_watcher.cpp  file_system_watcher.h  format.h  fwd.h  hash.h  input.cpp  input.h  lmdb_cache.cpp  lmdb_cache.h  logger.cpp  logger.h  macros.h  maths.h  memory_mapped_file.cpp  memory_mapped_file.h  memory_mapped_file_stream.cpp  memory_mapped_file_stream.h  memory_stream.cpp  memory_stream.h  object.cpp  object.h  platform.cpp  platform.h  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  (+19 more)
src/sgl/device/: agility_sdk.h  blit.cpp  blit.h  blit.slang  buffer_cursor.cpp  buffer_cursor.h  command.cpp  command.h  coopvec.cpp  coopvec.h  cuda_interop.cpp  cuda_interop.h  cuda_utils.cpp  cuda_utils.h  cursor_access_wrappers.h  cursor_utils.cpp  cursor_utils.h  debug_logger.h  device.cpp  device.h  device_child.cpp  device_child.h  device_resource.cpp  device_resource.h  fence.cpp  fence.h  formats.cpp  formats.h  fwd.h  helpers.cpp  helpers.h  hot_reload.cpp  hot_reload.h  input_layout.cpp  input_layout.h  kernel.cpp  kernel.h  native_formats.h  native_handle.h  native_handle_traits.h  (+31 more)
src/sgl/device/python/: device.cpp  types.cpp
src/sgl/device/tests/: test_coopvec.py  test_pipeline.py
src/sgl/math/: colorspace.h  constants.h  constants.slang  float16.cpp  float16.h  matrix.h  matrix_math.h  matrix_types.h  quaternion.h  quaternion_math.h  quaternion_types.h  ray.h  ray.slang  scalar_math.h  scalar_types.h  vector.h  vector_math.h  vector_types.h
src/sgl/ui/: fwd.h  imgui.slang  imgui_config.h  ui.cpp  ui.h  widgets.cpp  widgets.h
src/sgl/utils/: renderdoc.cpp  renderdoc.h  slangpy.cpp  slangpy.h  tev.cpp  tev.h  texture_loader.cpp  texture_loader.h
src/slangpy_ext/: CMakeLists.txt  nanobind.h  py_doc.h  slangpy_ext.cpp  slangpy_ext_pch.h
src/slangpy_ext/app/: app.cpp
src/slangpy_ext/core/: bitmap.cpp  crypto.cpp  data_struct.cpp  data_type.cpp  input.cpp  logger.cpp  object.cpp  platform.cpp  rfilter.cpp  struct.cpp  thread.cpp  timer.cpp  window.cpp
src/slangpy_ext/device/: buffer_cursor.cpp  command.cpp  coopvec.cpp  cursor_utils.h  device.cpp  device_child.cpp  device_resource.cpp  fence.cpp  formats.cpp  input_layout.cpp  kernel.cpp  native_handle.cpp  pipeline.cpp  query.cpp  raytracing.cpp  reflection.cpp  resource.cpp  sampler.cpp  shader.cpp  shader_cursor.cpp  shader_object.cpp  surface.cpp  types.cpp
src/slangpy_ext/math/: matrix.cpp  primitivetype.h  quaternion.cpp  scalar.cpp  vector.cpp
src/slangpy_ext/ui/: ui.cpp  widgets.cpp
src/slangpy_ext/utils/: renderdoc.cpp  slangpy.cpp  slangpy.h  slangpybuffer.cpp  slangpybuffer.h  slangpyfunction.cpp  slangpyfunction.h  slangpypackedarg.cpp  slangpypackedarg.h  slangpyresources.cpp  slangpyresources.h  slangpystridedbufferview.cpp  slangpystridedbufferview.h  slangpytensor.cpp  slangpytensor.h  slangpytorchtensor.cpp  slangpytorchtensor.h  slangpyvalue.cpp  slangpyvalue.h  tev.cpp  texture_loader.cpp  torch_bridge.cpp  torch_bridge.h
tests/: CMakeLists.txt
tests/sgl/: sgl_tests.cpp  testing.cpp  testing.h
tests/sgl/core/: test_dds_file.cpp  test_enum.cpp  test_file_system_watcher.cpp  test_lmdb_cache.cpp  test_maths.cpp  test_memory_mapped_file.cpp  test_object.cpp  test_platform.cpp  test_plugin.cpp  test_short_vector.cpp  test_static_vector.cpp  test_stream.cpp  test_string.cpp
tests/sgl/device/: test_device.cpp  test_formats.cpp  test_hot_reload.cpp  test_shader.cpp
tests/sgl/math/: test_float16.cpp  test_matrix.cpp  test_quaternion.cpp  test_vector.cpp
tests/slangpy/core/: test_bitmap.py  test_crypto.py  test_struct.py
tests/slangpy/device/: test_bindless_texture.slang  test_buffer.py  test_buffer.slang  test_buffer_cursor.py  test_coopvec.py  test_declrefs.py  test_declrefs_falcorhashgrid.slang  test_device.py  test_link_time.py  test_link_time_constants.slang  test_link_time_type_binary_op.slang  test_parameter_block.slang  test_pipeline_raster.slang  test_print.py  test_print.slang  test_shader.py  test_shader_cursor.py  test_shader_foo.slang  test_torch_interop.py  test_type_conformance.py
tests/slangpy/device/slang/: test_cast_float16.py  test_cast_float16.slang  test_float16.py  test_float16.slang  test_float64.slang  test_nested_structs.slang  test_uint64.py  test_uint64.slang
tests/slangpy/math/: test_quaternion.py
tests/slangpy/slangpy_tests/: helpers.py  nested_types.slang  nested_types_generics.slang  performance.py  test_buffer_sizes.py  test_caching.py  test_differential_function_call.py  test_example_kernel_scalar.slang  test_name_parse.py  test_pytorch.py  test_raw_dispatch.py  test_return_types.py  test_sgl.py  test_signature_hashing.py  test_simple_function_creation.py  test_tensor.py  test_tensor.slang  test_tensor_with_grads.py  test_textures.py  test_textures.slang  test_torchintegration.py  test_transforms.slang  test_type_conformances.py  torchbenchmark.py
tests/slangpy/slangpy_tests/generated_tests/: polynomial_soa_backwards.slang
tests/slangpy/utils/: test_tev.py  test_texture_loader.py
tools/: check_ascii_hook.py  ci.py  fix_comments.py  fix_imports.py  fix_license.py  fix_version_numbers.py  generate_tensors.py  gpu_clock.py  local_precommit.py  msvc.py  postprocess_stub.py  pymacro.py
(+302 files in other folders)
