[build-system]
requires = [
    "setuptools",
    "wheel",
    "cmake==3.30.0",
    "ninja",
    "typing_extensions",
    "libcst",
    "numpy>=1.26.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "slangpy"
authors = [
    { name = "Simon Kallweit", email = "skallweit@nvidia.com" },
    { name = "Chris Cummings", email = "chriscummings@nvidia.com" },
    { name = "Benedikt Bitterli", email = "bbitterli@nvidia.com" },
    { name = "Sai Bangaru", email = "sbangaru@nvidia.com" },
    { name = "Yong He", email = "yhe@nvidia.com" },
]
description = "Easily call Slang functions and integrate with PyTorch auto diff directly from Python."
readme = "README.md"
license="Apache-2.0"
requires-python = ">=3.9"
dependencies = ["typing_extensions", "numpy>=1.26.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/shader-slang/slangpy"
Documentation = "https://slangpy.shader-slang.org/en/latest/"
Repository = "https://github.com/shader-slang/slangpy"
Issues = "https://github.com/shader-slang/slangpy/issues"
Changelog = "https://slangpy.shader-slang.org/en/latest/changelog.html"

[tool.black]
line-length = 100

[tool.pyright]
include = ["./src", "./tools", "./examples"]
extraPaths = ["./src/sgl/device/tests"]
ignore = [
    "./tools/host",
    "./tools/download",
    "./src/sgl/device/tests/test_torch_interop.py",
    "./examples/torch_interop/torch_interop.py",
    "./tools/msvc.py",
]
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportMissingSuperCall = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "warning"
reportInvalidTypeForm = "warning"

[tool.pytest.ini_options]
pythonpath = ["."]
